<resources>
    <string name="facebook_app_id">205799107389201</string> <string name="fb_login_protocol_scheme">fb205799107389201</string>
    <string name="app_name">RolAppeame</string>
    <string name="ajustes">ajustes</string>

    //Descripiciones atributos
    <string name="desFuerza">
        Representa la potencia física, la dureza, el músculo y todo eso.
    </string>
    <string name="desAgilidad">
        Este atributo cubre la velocidad en general, la destreza y todo lo relacionado.
    </string>
    <string name="desPercepcion">
        Capacidad de descubrir o darse cuenta de algo.
    </string>
    <string name="desConstitucion">
        Salud y forma física del personaje. Resistencia a las adversidades físicas.
    </string>
    <string name="desInteligencia">
        Intelecto, voluntad y sabiduría son los ámbitos cubiertos por la Mente.
    </string>
    <string name="desCarisma">
        El aspecto general , el atractivo y el encanto.
    </string>
    <string name="fuerza">Fuerza:</string>
    <string name="agilidad">Agilidad:</string>
    <string name="percepci_n">Percepción:</string>
    <string name="constituci_n">Constitución:</string>
    <string name="inteligencia">Inteligencia:</string>
    <string name="carisma">Carisma:</string>
    <string name="imagen_del_personaje">Imagen del personaje</string>
    <string name="avatar_de_personaje">Avatar de personaje</string>
    <string name="condiciones_legales">Estoy de acuerdo y acepto las condiciones legales</string>
    <string name="aceptar">Aceptar</string>
    <string name="si">Sí</string>
    <string name="nombre">Nombre</string>
    <string name="volver">Volver</string>
    <string name="continuar">Continuar</string>
    <string name="partida_jugador">Partida Jugador</string>
    <string name="entrar">Entrar</string>
    <string name="eliminar">Eliminar</string>
    <string name="guardar">Guardar</string>
    <string name="comentario">Tus personajes</string>
    <string name="comentarioInicial">Aquí se mostrarán tus partidas cuando añadas alguna</string>
    <string name="About">Acerca de</string>
    <string name="titulo_condiciones">Condiciones legales</string>
    <string name="contenido_about">RolAppeame es una applicación desarrollada por:  G. Samantha Guerrero Macías. GSam en GitHub.\nLa aplicación está diseñada para poder anotar fácilmente y con rápidez las estadísticas de tu personaje en un juego de rol. Al mismo tiempo que te ofrece información sobre las distintas opciones del juego y su lore</string>
    <string name="contenido_condiciones">Al aceptar las condiciones aquí recogidas, autorizas a G. Samantha Guerrero a recopilar información sobre la aplicación. Su rendimiento, su uso y sus errores, si es que se produjera alguno.</string>
    <string name="suerte">Buena suerte en la partida</string>
    <string name="seguro">Si guardas se modificarán los datos que hayas cambiado\n ¿Seguro que quieres continuar?</string>
    <string name="no">No</string>
    <string name="buenasuerte">Qué bien has ganado puntos</string>
    <string name="malasuerte">Qué mal has perdido puntos</string>
    <string name="error">No puedes guardar un personaje sin nombre</string>
    <string name="quedanpuntos">Te quedan puntos por repartir\n ¿Quieres continuar?</string>
    <string name="tienes">Tienes </string>
    <string name="puntos"> puntos a repartir entre:</string>
    <string name="errorfoto">No puedes guardar un personaje sin una foto</string>
    <string name="control">Debes aceptar primero las condiciones legales</string>
    <string name="m_nimo">Mínimo</string>
    <string name="m_ximo">Máximo</string>
    <string name="title_activity_maps">Map</string>
    <string name="preferencias">Preferencias</string>
    <string name="visita_mapa">Visita mapa</string>
    <string name="silenciar_movil">Sonido del movil</string>
    <string name="eng_esp">Eng - Esp</string>
    <string name="modo_noche">Modo noche</string>
    <string name="personajes">Personajes</string>
    <string name="partidas">Partidas</string>
    <string name="partida_master">Partida Master</string>
    <string name="enemigos">Enemigos</string>
    <string name="pregunta_partida">¿Cómo quieres jugar?</string>
    <string name="jugador">Jugador</string>
    <string name="vida">Vida: (</string>
    <string name="ataque">Ataque: (</string>
    <string name="defensa">Defensa: (</string>
    <string name="vida_vista">Vida:</string>
    <string name="ataque_vista">Ataque:</string>
    <string name="defensa_vista">Defensa:</string>
    <string name="vida_info">Esto indicará la vida que tendrá tu enemigo</string>
    <string name="ataque_info">Esto es el daño que puede causar a tus personajes</string>
    <string name="defensa_info">Esta es la defensa que tendrá tu enemigo cuando los personajes le ataquen</string>
    <string name="generar_info">Pulsa el botón Generar, para generar un enemigo aleatorio</string>
    <string name="vida_mostrar">Vida</string>
    <string name="ataque_mostrar">Ataque</string>
    <string name="defensa_mostrar">Defensa</string>
    <string name="generar_aleatorio">Generar aleatorio</string>
    <string name="enemigo_info_crear">Estos enemigo se enfrentarán a tus personajes con valores aleatorios entre los mínimos y máximos que escojas</string>
    <string name="eliminar_mensaje">El personaje se ha eliminado correctamente</string>
    <string name="eliminar_error">El personaje no se ha podido eliminar</string>
    <string name="loc">Esto queda en </string>
    <string name="guardado_mensaje">El personaje se ha guardado correctamente</string>
    <string name="guardado_error">El personaje NO se ha guardado</string>
    <string name="ver_web">Ver en web</string>
    <string name="sonido_bajado">Se ha bajado el sonido</string>
    <string name="sonido_subido">Se ha subido el sonido</string>
    <string name="title_activity_prueba">prueba</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
