<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/IVavatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/imagen_del_personaje"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TVnombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TVraza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/TVoficio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/TVfuerza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fuerza" />

        <TextView
            android:id="@+id/TVagilidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agilidad" />

        <TextView
            android:id="@+id/TVpercepcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/percepci_n" />

        <TextView
            android:id="@+id/TVconstitucion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/constituci_n" />

        <TextView
            android:id="@+id/TVinteligencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inteligencia" />

        <TextView
            android:id="@+id/TVcarisma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carisma" />
    </LinearLayout>
</LinearLayout>