<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferencias"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="236dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <CheckBox
            android:id="@+id/cbSonido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/silenciar_movil" />

        <CheckBox
            android:id="@+id/cbNoche"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modo_noche" />

        <CheckBox
            android:id="@+id/cbIdioma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eng_esp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>